add content for my to do list

--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-        1 file(s) copied.
+<!DOCTYPE html>
+<html>
+  <body>
+    <h1> Aziria D. Rodriguez Arce </h1>
+    <h2>To do list </h2>
+    <h3>Uncompleted </h3>
+      <ul>
+        <li> stuff</lil>
+        <li>more stuff </lil>
+        <li>more more stuff </lil>
+      </ul>
+    <h3> Completed </h3>
+      <ol>
+        <li> complicated stuff </li>
+        <li> more complicated stuff </li>
+        <li> more more complicadted stuff </li>
+      </ol>
+    </body>
+</html>
